--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de IMC</title>
+    <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
