--- a/index.html
+++ b/index.html
@@ -5,27 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de IMC</title>
     <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="container">
-        <h1>Calculadora de IMC</h1>
-        <div class="form-group">
-            <label for="altura">Altura (m)</label>
-            <input type="number" id="altura" step="0.01" placeholder="Ex: 1.75">
+<body class="light-mode">
+    <header>
+        <div class="container header-container">
+            <h1>Calculadora de IMC</h1>
+            <button id="toggleMode" aria-label="Alternar modo claro/escuro">🌙</button>
         </div>
-        <div class="form-group">
-            <label for="peso">Peso (kg)</label>
-            <input type="number" id="peso" step="0.1" placeholder="Ex: 70">
+    </header>
+
+    <main>
+        <div class="container card">
+            <form id="imcForm">
+                <div class="form-group">
+                    <label for="altura">Altura (m)</label>
+                    <input type="number" id="altura" step="0.01" placeholder="Ex: 1.75" required>
+                </div>
+                <div class="form-group">
+                    <label for="peso">Peso (kg)</label>
+                    <input type="number" id="peso" step="0.1" placeholder="Ex: 70" required>
+                </div>
+                <button type="submit" id="calcular">Calcular IMC</button>
+            </form>
+            <div id="resultado" class="resultado"></div>
         </div>
-        <button id="calcular">Calcular</button>
-        <div id="resultado"></div>
-    </div>
+    </main>
+
     <footer>
-        <p>&copy; 2025 Calculadora de IMC. DEV Luck Noshi Todos os direitos reservados.</p>
+        <div class="container">
+            <p>&copy; 2025 Calculadora de IMC. DEV Luck Noshi. Todos os direitos reservados.</p>
+        </div>
     </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
-
