Alterando footer copy
Alterando nome no copy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Calculadora de IMC. DEV Luck Noshi. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Calculadora de IMC. DEV Noshi. Todos os direitos reservados.</p>
         </div>
     </footer>
 
